; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-thin-metadata.c_dm_thin_changed_this_transaction.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-thin-metadata.c_dm_thin_changed_this_transaction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_thin_device = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dm_thin_changed_this_transaction(%struct.dm_thin_device* %0) #0 {
  %2 = alloca %struct.dm_thin_device*, align 8
  %3 = alloca i32, align 4
  store %struct.dm_thin_device* %0, %struct.dm_thin_device** %2, align 8
  %4 = load %struct.dm_thin_device*, %struct.dm_thin_device** %2, align 8
  %5 = getelementptr inbounds %struct.dm_thin_device, %struct.dm_thin_device* %4, i32 0, i32 1
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = call i32 @down_read(i32* %7)
  %9 = load %struct.dm_thin_device*, %struct.dm_thin_device** %2, align 8
  %10 = getelementptr inbounds %struct.dm_thin_device, %struct.dm_thin_device* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  store i32 %11, i32* %3, align 4
  %12 = load %struct.dm_thin_device*, %struct.dm_thin_device** %2, align 8
  %13 = getelementptr inbounds %struct.dm_thin_device, %struct.dm_thin_device* %12, i32 0, i32 1
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = call i32 @up_read(i32* %15)
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @down_read(i32*) #1

declare dso_local i32 @up_read(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
